<resources>
    <string name="app_name">MyWanAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="project">项目</string>
    <string name="nav">导航</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_new">新</string>
    <string name="open_project">开源项目</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="one_day">1天</string>
    <string name="open_in_the_browser">用浏览器打开</string>
    <string name="share">分享</string>
    <string name="common_website">常用网站</string>
    <string name="search">搜索</string>
    <string name="please_input_search_key">请输入搜索关键词</string>
    <string name="permission_deny">未授予权限~</string>
    <string name="no_data">暂无数据</string>
    <string name="click_me_to_retry">重新加载</string>
    <string name="click_to_login">点击登陆</string>
    <string name="setting">设置</string>
    <array name="load_colors">
        <item>@color/colorAccent</item>
    </array>
    <string name="title_activity_login">login</string>

    <string name="prompt_username">用户名（至少6位）</string>
    <string name="prompt_password">密码（至少6位）</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_to_sign_up">注册</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_username">用户名太短了~</string>
    <string name="error_invalid_password">密码太短了~</string>
    <string name="title_activity_register">SignUp</string>
    <string name="register_success">注册成功</string>
    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/duzzi/MyWanAndroid" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
    ]]></string>
    <string name="title_activity_about">关于WanAndroid</string>
    <string name="about">关于</string>
    <string name="my_collect">我的收藏</string>
    <string name="title_activity_settings">Settings</string>

    <string name="todo">待完成</string>
    <string name="logout">退出登录</string>
    <string name="replace">replace</string>
    <string name="add">add</string>
    <string name="test">test</string>
    <string name="view">view</string>
    <string name="slideshow">Slideshow</string>


</resources>
