<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16dp"
    tools:context=".ui.activity.TestActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50dp"
        android:text="@string/replace"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50dp"
        android:text="@string/add"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/height_50dp"
        android:layout_height="@dimen/height_50dp"
        android:contentDescription="@string/test"
        android:src="@drawable/img_android"/>

    <FrameLayout
        android:id="@+id/fl_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>